--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,22 +1,16 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="#">Edu courses</a>
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">Edu courses</a>
     
       <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentToken$ | async">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Courses</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link" routerLink="/courses" routerLinkActive="active">Courses</a>
         </li>
       </ul>
 
       <div class="dropdown" *ngIf="accountService.currentToken$ | async" dropdown>
         <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome Guest</a>
-        <div class="dropdown-menu mt-3" *dropdownMenu="">
+        <div class="dropdown-menu mt-3" *dropdownMenu>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
       </div>
@@ -34,7 +28,7 @@
           class="form-control me-2" 
           type="password" 
           placeholder="Password">
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-success" type="submit">Login</button>
       </form>
 
   </div>
