--- a/client/src/app/courses/course-list/course-list.component.html
+++ b/client/src/app/courses/course-list/course-list.component.html
@@ -1,1 +1,5 @@
-<p>course-list works!</p>
+<div class="row">
+    <div class="col-2" *ngFor="let course of courses">
+        <app-course-card [course]="course"></app-course-card>
+    </div>
+</div>
